.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconfig__c.object
<CustomObject>
    <description>soconfig__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconfig_soline__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soconfig_icitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT( rstk__soconfig_dmdline__c ) &amp; &apos;_&apos; &amp;  TEXT( rstk__soconfig_oper__c )</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_altprice1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field is used in the setting of &quot;configurable&quot; component Alternate Price 1 portion of the rollup price for the SO Line for a product configured using the model configurator.</inlineHelpText>
        <label>Alternate Price 1</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_altprice1cc__c</fullName>
        <formula>IF(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c, rstk__soconfig_altprice1__c,IF( ISNULL(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__soconfig_altprice1__c , rstk__soconfig_altprice1__c * rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_altprice1hc__c</fullName>
        <formula>IF(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c,IF( ISNULL(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__soconfig_altprice1__c, rstk__soconfig_altprice1__c/rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c), rstk__soconfig_altprice1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_altprice2__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field is used in the setting of &quot;configurable&quot; component Alternate Price 2 portion of the rollup price for the SO Line for a product configured using the model configurator.</inlineHelpText>
        <label>Alternate Price 2</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_altprice2cc__c</fullName>
        <formula>IF(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c, rstk__soconfig_altprice2__c,  IF( ISNULL(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__soconfig_altprice2__c, rstk__soconfig_altprice2__c*rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_altprice2hc__c</fullName>
        <formula>IF(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c ,IF( ISNULL(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__soconfig_altprice2__c , rstk__soconfig_altprice2__c / rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c), rstk__soconfig_altprice2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_comment__c</fullName>
        <description>The user can enter comments related to a given component. (PG)</description>
        <inlineHelpText>These are Comments associated with this Sales Order configuration</inlineHelpText>
        <label>Comment</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_costbasis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost Basis</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_directpoqty__c</fullName>
        <inlineHelpText>This is the Direct Purchase Quantity for this Item on this SO Configuration</inlineHelpText>
        <label>Direct Purchase Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_dmdcomment__c</fullName>
        <label>Demand Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_dmdline__c</fullName>
        <description>This field holds the Demand Line associated with this component (as identified on the Engineering BOM) and is carried to the Work Order Demand. (PG)</description>
        <inlineHelpText>This is the WO Demand Line Number associated with this Configuration</inlineHelpText>
        <label>WO Demand Line Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_extaltprice1__c</fullName>
        <formula>rstk__soconfig_qtyper__c * rstk__soconfig_altprice1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to set the &quot;configurable&quot; component Alternate Price 1 portion of the rollup price for the SO Line for a product configured using the model configurator. Value = Alternate Price 1 times Qty Per.</inlineHelpText>
        <label>Extended Alt Price 1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_extaltprice2__c</fullName>
        <formula>rstk__soconfig_qtyper__c * rstk__soconfig_altprice2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to set the &quot;configurable&quot; component Alternate Price 2 portion of the rollup price for the SO Line for a product configured using the model configurator. Value = Alternate Price 2 times Qty Per.</inlineHelpText>
        <label>Extended Alt Price 2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_fixedqty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this component Quantity Per is fixed (not to be extended by the order Quantity). (PG)</description>
        <inlineHelpText>This is the fixed Quantity for this Item on this SO Configuration</inlineHelpText>
        <label>Fixed Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is used ‘behind the scenes’ to facilitate the lookup to the ICITEM (Inventory Item Master) table. (PG)</description>
        <inlineHelpText>This is the Inventory Item Number on this SO Configuration</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>SO Line Configured Products</relationshipLabel>
        <relationshipName>SOCONFIGs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_item__c</fullName>
        <description>Item Number of the component.  Inventory items must be on the Inventory Item Master (ICITEM_ITEM) and NICs can optionally be validated against the SOSERVICE (Service Item) table. (PG)</description>
        <inlineHelpText>This is the Item Number on this Sales Order Configuration</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_markuppct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Markup Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_noprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Print on Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_oper__c</fullName>
        <description>This field holds the routing operation associated with this component (as identified on the Engineering BOM) and is carried to the Work Order Demand. (PG)</description>
        <inlineHelpText>This is the Operation Number associated with this Configuration</inlineHelpText>
        <label>Operation</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_price__c</fullName>
        <description>The unit price (per 1) for this component.  Optionally, the Sales Order Line price can be derived by summing the price of the components.  Component pricing originates from the SOCOMPP (Component Pricing) table and can be overridden here. (PG)</description>
        <inlineHelpText>This is the Price of this Item on this SO Configuration</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_pricecc__c</fullName>
        <formula>IF(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c, rstk__soconfig_price__c ,  IF( ISNULL(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__soconfig_price__c, rstk__soconfig_price__c * rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Price - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_pricehc__c</fullName>
        <formula>IF(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c ,IF( ISNULL(rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__soconfig_price__c, rstk__soconfig_price__c /rstk__soconfig_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) , rstk__soconfig_price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Price – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_procno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field holds the labor Process associated with this component (as identified on the Engineering BOM) and is carried to the Work Order Demand. (PG)</description>
        <inlineHelpText>This is the Process Number associated with this Configuration</inlineHelpText>
        <label>Process</label>
        <referenceTo>rstk__rtproc__c</referenceTo>
        <relationshipLabel>SO Line Configured Products</relationshipLabel>
        <relationshipName>soconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity per for this component (multiplied by the Order Line quantity ordered to get the Quantity Required). (PG)</description>
        <inlineHelpText>This is the Quantity  Per for this Item on this SO Configuration</inlineHelpText>
        <label>Qty Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity required for this component on this order line (calculated by multiplying the Quantity Per by the Sales Order Line quantity. (PG)</description>
        <inlineHelpText>This is the Quantity  Required for this Item on this SO Configuration</inlineHelpText>
        <label>Qty Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_reqdate__c</fullName>
        <description>This field defaults from the Order Line Required Date, can be modified by the user and will be carried to the Work Order Demand Date Required. (PG)</description>
        <inlineHelpText>This is the Date Required for this Item on this SO Configuration</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_scppct__c</fullName>
        <description>This field holds the Scrap Factor associated with this component (as identified on the Engineering BOM) and is carried to the Work Order Demand. (PG)</description>
        <inlineHelpText>This is the Scrap Factor for this Item on the SO Configuration</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_seq__c</fullName>
        <inlineHelpText>This is the Sequence Number for this SO Configuration</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_setqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field holds the Setup Quantity associated with this component (as identified on the Engineering BOM) and is carried to the Work Order Demand. (PG)</description>
        <inlineHelpText>This is the Setup Quantity for this Item on this SO Configuration</inlineHelpText>
        <label>Setup Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_soline__c</fullName>
        <inlineHelpText>This is the Sales Order Line associated with this Configuration</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipName>soconfigs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_uom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field reflects the inventory unit of measure from the ICITEM (Inventory Item Master) and cannot be changed. (PG)</description>
        <inlineHelpText>This is the Unit of Measure for this Item on the SO Configuration</inlineHelpText>
        <label>Unit of Measure</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>SO Line Configured Products</relationshipLabel>
        <relationshipName>soconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_wbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Job Code (WBS Account) associated with SO Configuration record.</inlineHelpText>
        <label>WBS Account</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipName>soconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconfig_wctr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field holds the labor Work Center associated with this component (as identified on the Engineering BOM) and is carried to the Work Order Demand. (PG)</description>
        <inlineHelpText>This is the Work Center associated with this Configuration</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>SO Line Configured Products</relationshipLabel>
        <relationshipName>soconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_extcost__c</fullName>
        <formula>rstk__soconfig_qtyper__c * rstk__soconfig_costbasis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SO Line Configured Product</label>
    <listViews>
        <fullName>rstk__RS_Sales_Order_Config</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconfig_dmdline__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__soconfig_icitem__c</columns>
        <columns>rstk__soconfig_soline__c</columns>
        <columns>rstk__soconfig_setqty__c</columns>
        <columns>rstk__soconfig_oper__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soconfig_wctr__c</columns>
        <columns>rstk__soconfig_procno__c</columns>
        <columns>rstk__soconfig_price__c</columns>
        <columns>rstk__soconfig_qtyper__c</columns>
        <columns>rstk__soconfig_qtyreq__c</columns>
        <columns>rstk__soconfig_seq__c</columns>
        <columns>rstk__soconfig_uom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>275</value>
        </filters>
        <label>Sales Order Config</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Line Configured Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_AddEvent</fullName>
        <active>true</active>
        <description>Validate Add SOCONFIG</description>
        <errorConditionFormula>ISPICKVAL( rstk__soconfig_icitem__r.rstk__icitem_item__r.rstk__peitem_itemtype__c, 
&apos;Labor Only&apos;)</errorConditionFormula>
        <errorMessage>Demands cannot exist for Labor Only Items</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__operation_not_less_than_zero</fullName>
        <active>true</active>
        <description>Operation cannot be less than zero.</description>
        <errorConditionFormula>ISNULL(rstk__soconfig_oper__c) || rstk__soconfig_oper__c &lt; 0</errorConditionFormula>
        <errorMessage>Operation cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__unitprice_not_less_than_zero</fullName>
        <active>true</active>
        <description>Unit price cannot be less than zero.</description>
        <errorConditionFormula>ISNULL(rstk__soconfig_price__c) || rstk__soconfig_price__c &lt; 0</errorConditionFormula>
        <errorMessage>Unit price cannot be less than zero.</errorMessage>
    </validationRules>
</CustomObject>